<?xml version="1.0"?>
<package>
  <name>industrial_desktop</name>
  <version>0.0.2</version>
  <description>The industrial_desktop package contains all "released" packages</description>
  <maintainer email="shaun.edwards@gmail.com">Shaun Edwards</maintainer>
  <license>BSD</license>
  <license>Apache 2.0</license>

  <url type="repository">https://github.com/ros-industrial/metapackages</url>
  <url type="bugtracker">https://github.com/ros-industrial/ros_industrial_issues/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>fanuc</run_depend>
  <run_depend>industrial_core</run_depend>
  <run_depend>motoman</run_depend>
  <run_depend>universal_robot</run_depend>
  <run_depend>abb</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
